# lights

./: .gitignore  Containerfile  LICENSE  README.md  compose.yaml  pyproject.toml
.github/workflows/: deploy.yml
frontend/: index.html  package.json
frontend/src/: App.vue
proxy/: Containerfile  proxy.conf
src/: main.py  range.py  scan_melk.py  server.py
tests/: test_main.py  test_range.py  test_server.py
